--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,19 +144,27 @@ INCLUDE_DIRECTORIES("${src}/sdl")
 INCLUDE_DIRECTORIES("${src}/xlib")
 INCLUDE_DIRECTORIES("${src}/xlib/absorpc")
 INCLUDE_DIRECTORIES("${src}/sdl/math")
-INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIR_2}")
-INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIR_1}")
+#INCLUDE_DIRECTORIES("${wxWidgets_ROOT_DIR}/lib/wx/include/gtk3-unicode-static-3.2")
+#INCLUDE_DIRECTORIES("${wxWidgets_SOURCE_DIR}/interface/wx")
+#INCLUDE_DIRECTORIES("${wxWidgets_SOURCE_DIR}/include/wx")
+ADD_EXECUTABLE(olex2 ${olex2_SRCS} ${all_SRCS} )
+ADD_EXECUTABLE(unirun ${unirun_SRCS} ${all_SRCS})
+
+message(WARNING ${wxWidgets_CXX_FLAGS})
 INCLUDE_DIRECTORIES(
     ${PANGOFT2_INCLUDE_DIRS}
     ${WAYLAND_CLIENT_INCLUDE_DIRS}
     ${WAYLAND_CURSOR_INCLUDE_DIRS}
     ${WAYLAND_EGL_INCLUDE_DIRS}
 )
-ADD_EXECUTABLE(unirun ${unirun_SRCS} ${all_SRCS})
-ADD_EXECUTABLE(olex2 ${olex2_SRCS} ${all_SRCS} )
 
 TARGET_LINK_LIBRARIES(unirun PRIVATE
-    wx-static
+    wx::base
+    wx::core
+    wx::gl
+    wx::net
+    wx::html
+    wx::stc
     ${OPENGL_LIBRARIES}
     ${Fontconfig_LIBRARIES}
     ${EXPAT_LIBRARIES}
@@ -174,7 +182,12 @@ TARGET_LINK_LIBRARIES(unirun PRIVATE
 
 
 TARGET_LINK_LIBRARIES(olex2 PRIVATE
-    wx-static
+    wx::base
+    wx::core
+    wx::gl
+    wx::net
+    wx::html
+    wx::stc
     ${OPENGL_LIBRARIES}
     ${Fontconfig_LIBRARIES}
     ${EXPAT_LIBRARIES}
